# uploader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: api.yml
api/: Cargo.toml  Dockerfile  build.rs
api/migrations/: 1_tables.sql  3_rename_to_storage_id.sql
api/src/: main.rs
api/src/database/: file.rs  image.rs  mod.rs
api/src/database/query/: file.rs  image.rs  mod.rs
api/src/endpoint/: index.rs  mod.rs  show.rs
api/src/endpoint/fairing/: bucket.rs  database.rs  mod.rs  storage.rs
api/src/endpoint/v1/: error.rs  mod.rs
api/src/endpoint/v1/file/: delete.rs  upload.rs
api/src/endpoint/v1/image/: delete.rs  mod.rs  upload.rs
api/src/s3/: bucket.rs  credentials.rs
api/src/storage/: drive.rs  driver.rs  mod.rs  object_storage.rs
docker/development/: README.md  docker-compose.yml
docker/production/: .gitignore  README.md  Rocket.toml  docker-compose.yml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/macros/: mod.rs  postgres_row_default.rs  uploader_error.rs
