[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Lennox Schneider <admin@lennoxlotl.dev>"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
aws-sdk-s3 = "1.58.0"
aws-credential-types = { version = "1.2.1", features = [
    "hardcoded-credentials",
] }
aws-config = "1.5.8"
async-trait = "0.1.83"
serde = "1.0.213"
thiserror = "1.0.65"
rand = "0.8.5"
macros = { path = "../macros" }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
build-info = "0.0.39"

[build-dependencies]
build-info-build = "0.0.39"
