[package]
name = "macros"
version = "0.1.0"
edition = "2021"
authors = ["Lennox Schneider <admin@lennoxlotl.dev>"]

[dependencies]
log = "0.4.22"
proc-macro2 = "1.0.88"
quote = "1.0.37"
serde = { version = "1.0.213", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
syn = { version = "2.0.82", features = ["full"] }
openssl = { version = "0.10.68", features = ["vendored"] }

[lib]
proc-macro = true
